--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
     <nav>
       <div class="left">
-        <img src="images/bloc logo.png" class="logo" alt="company logo">
+        <img class="logo" src="images/bloc-logo.png" class="logo" alt="company logo">
       </div>
       <ul class="right">
         <li><a href="#">Contact</a></li>
@@ -17,10 +18,11 @@
         <li><a href="#">Courses</a></li>
       </ul>
     </nav>
+
     <article class="container">
       <header>
         <figure>
-          <img src="instagram-pic.jpg" class="medium-pic" alt="Draplin and c2">
+          <img class="medium-pic" src="images/instagram-pic.jpg" class="medium-pic" alt="Draplin and c2">
           <figcaption>Aaron Draplin explains that Chris Courtney has to pay the next parking ticket.</figcaption>
         </figure>
         <h1>Thinking beyond designer</h1>
